# sdl_with_bgfx_test

./: .gitmodules  CMakeLists.txt  README.md  compile_commands.json
other_cmake_files/: linux_to_windows.cmake
src/: test_1.cpp
